@@ -93,6 +93,12 @@ task functional(type: Test, description: 'Runs the functional tests.', group: 'V
   maxHeapSize = '1G'
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 // before committing a change, make sure task still works
 dependencyUpdates {
   def isNonStable = { String version ->
@@ -147,7 +153,7 @@ def versions = [
 ]
 
 dependencies {
-  implementation 'com.github.hmcts:ecm-common:0.1.130'
+  implementation 'com.github.hmcts:ecm-common:0.1.132'
 
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -155,7 +161,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.retry:spring-retry'
 
-  implementation 'org.postgresql:postgresql:42.2.22'
+  implementation 'org.postgresql:postgresql:42.2.23'
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
@@ -201,6 +207,7 @@ dependencies {
   testImplementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
   testImplementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
   testImplementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
+  testImplementation 'com.github.hmcts:fortify-client:1.2.0:all'
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity, {
